--- a/index.html
+++ b/index.html
@@ -5,10 +5,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy New Year</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
-
+    <Header>
+        <div>
+            <h4>Happy New Year</h4>
+            <h1>New Year Party Celebration</h1>
+        </div>
+    </Header>
+    <Main>
+        <section>
+            <h1></h1>
+            <p></p>
+            <h2></h2>
+            <img src="" alt="">
+        </section>
+        <section>
+            <div>
+                <h1></h1>
+                <p></p>
+                <button></button>
+            </div>
+        </section>
+        <section>
+            <div>
+                <p></p>
+                <p></p>
+                <p></p>
+                <button></button>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h4></h4>
+                <h1></h1>
+                <p></p>
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h2></h2>
+                <p></p>
+                <img src="" alt="">
+            </div>
+        </section>
+        <section>
+            <h4></h4>
+            <h1></h1>
+            <p></p>
+            <img src="" alt="">
+        </section>
+        <section>
+            <div>
+                <h4></h4>
+                <h2></h2>
+                <p></p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+        </section>
+        <section>
+            <div>
+                <img src="" alt="">
+                <h2></h2>
+                <p></p>
+            </div>
+            <div>
+                <input type="email" name="" id="">
+                <input type="button" value="">
+            </div>
+        </section>
+    </Main>
+    <Footer>
+        <div>
+            <div>
+                <p></p>
+                <p></p>
+            </div>
+            <div>
+                <p></p>
+                <p></p>
+            </div>
+        </div>
+        <div>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+        </div>
+        <div>
+            <p></p>
+            <p></p>
+        </div>
+    </Footer>
 </body>
 
 </html>
