--- a/index.html
+++ b/index.html
@@ -17,94 +17,102 @@
     </Header>
     <Main>
         <section>
-            <h1></h1>
-            <p></p>
-            <h2></h2>
-            <img src="" alt="">
+            <h1>65% OFF</h1>
+            <p>OUR HOLIDAY DEALS ARE BETTER</p>
+            <h2>ALL CATEGORIES</h2>
+            <img src="resources/New Year Photo.png" alt="">
         </section>
         <section>
             <div>
-                <h1></h1>
-                <p></p>
-                <button></button>
-            </div>
-        </section>
-        <section>
-            <div>
-                <p></p>
-                <p></p>
-                <p></p>
-                <button></button>
+                <h1>Welcome to midnight party</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+                <button>Join Now</button>
             </div>
         </section>
         <section>
             <div>
-                <h4></h4>
-                <h1></h1>
-                <p></p>
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <h2></h2>
-                <p></p>
-                <img src="" alt="">
-            </div>
-        </section>
-        <section>
-            <h4></h4>
-            <h1></h1>
-            <p></p>
-            <img src="" alt="">
-        </section>
-        <section>
-            <div>
-                <h4></h4>
-                <h2></h2>
-                <p></p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <p>Place: New Park Hotel</p>
+                <p>Date: 31 December Night 2023</p>
+                <p>Time: Evening 7.30 pm to 12.30 am</p>
+                <button>Join Now</button>
             </div>
         </section>
         <section>
             <div>
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <h4>NEW BEST OFFER</h4>
+                <h1>Coming Soon</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
             </div>
             <div>
-                <input type="email" name="" id="">
-                <input type="button" value="">
+                <img src="resources/Ellipse 1.png" alt="">
+            </div>
+            <div>
+                <h2>2024</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="resources/Group 96.png" alt="">
+            </div>
+        </section>
+        <section>
+            <h4>WHAT IS FUNCTIONAL</h4>
+            <h1>Holidays Sale 50%</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
+                risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+            <img src="resources/Rectangle 1.png" alt="">
+        </section>
+        <section>
+            <div>
+                <h4>THE BEST GIFTS</h4>
+                <h2>Our Awesome Portfolio</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div>
+                <img src="resources/Rectangle 3.png" alt="">
+                <img src="resources/Rectangle 4.png" alt="">
+                <img src="resources/Rectangle 5.png" alt="">
+                <img src="resources/Rectangle 6.png" alt="">
+                <img src="resources/Rectangle 7.png" alt="">
+                <img src="resources/Rectangle 8.png" alt="">
+            </div>
+        </section>
+        <section>
+            <div>
+                <img src="resources/Group 61.png" alt="">
+                <h2>Subscribe Newsletter</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div>
+                <input type="email" placeholder="user@gmail.com" name="" id="">
+                <!-- problem -->
+                <input type="button" placeholder="Subscribe" value="">
             </div>
         </section>
     </Main>
     <Footer>
         <div>
             <div>
-                <p></p>
-                <p></p>
+                <p>44, Big Building Roosevelt Street
+                    Beach Gardens Florida 33410</p>
             </div>
             <div>
-                <p></p>
-                <p></p>
+                <!-- icon -->
+                <p>+00 123 584 124</p>
+                <!-- icon -->
+                <p>www.website.com</p>
             </div>
         </div>
         <div>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
+            <button><img src="resources/Instagram.png" alt=""></button>
+            <button><img src="resources/Twitter.png" alt=""></button>
+            <button><img src="resources/Linkedin.png" alt=""></button>
+            <button><img src="resources/Facebook.png" alt=""></button>
         </div>
         <div>
-            <p></p>
-            <p></p>
+            <p>2017, All Rights Reserved.</p>
+            <p>Unsubscribe</p>
         </div>
     </Footer>
 </body>
