--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <Header>
-        <div>
+        <div class="Title">
             <h4>Happy New Year</h4>
             <h1>New Year Party Celebration</h1>
         </div>
