--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 
 <body>
-    <Header>
-        <div class="Title">
+    <Header class="banner">
+        <div class="banner-title">
             <h4>Happy New Year</h4>
-            <h1>New Year Party Celebration</h1>
+            <h1>New Year Party <br> Celebration</h1>
         </div>
     </Header>
     <Main>
-        <section>
+        <section class="deals">
             <h1>65% OFF</h1>
             <p>OUR HOLIDAY DEALS ARE BETTER</p>
             <h2>ALL CATEGORIES</h2>
             <img src="resources/New Year Photo.png" alt="">
         </section>
-        <section>
+        <section class="party">
             <div>
                 <h1>Welcome to midnight party</h1>
                 <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
@@ -30,7 +30,7 @@
                 <button>Join Now</button>
             </div>
         </section>
-        <section>
+        <section class="details">
             <div>
                 <p>Place: New Park Hotel</p>
                 <p>Date: 31 December Night 2023</p>
@@ -38,7 +38,7 @@
                 <button>Join Now</button>
             </div>
         </section>
-        <section>
+        <section class="offer">
             <div>
                 <h4>NEW BEST OFFER</h4>
                 <h1>Coming Soon</h1>
@@ -54,14 +54,14 @@
                 <img src="resources/Group 96.png" alt="">
             </div>
         </section>
-        <section>
+        <section class="sale">
             <h4>WHAT IS FUNCTIONAL</h4>
             <h1>Holidays Sale 50%</h1>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
                 risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
             <img src="resources/Rectangle 1.png" alt="">
         </section>
-        <section>
+        <section class="gifts">
             <div>
                 <h4>THE BEST GIFTS</h4>
                 <h2>Our Awesome Portfolio</h2>
@@ -77,7 +77,7 @@
                 <img src="resources/Rectangle 8.png" alt="">
             </div>
         </section>
-        <section>
+        <section class="newsletter">
             <div>
                 <img src="resources/Group 61.png" alt="">
                 <h2>Subscribe Newsletter</h2>
