--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
         </section>
         <section class="party">
             <div>
-                <h1>Welcome to midnight party</h1>
+                <h1>Welcome to <br> midnight party</h1>
                 <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
                     sodales risus ut pellentesque vel euismod. </p>
                 <button>Join Now</button>
+            </div>
+            <div class="year-image">
+                <img src="resources/Group 70.png" alt="">
             </div>
         </section>
         <section class="details">
