--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </div>
         </section>
         <section class="details">
-            <div>
-                <p>Place: New Park Hotel</p>
-                <p>Date: 31 December Night 2023</p>
-                <p>Time: Evening 7.30 pm to 12.30 am</p>
+            <div class="details-container">
+                <p> <span class="text-color">Place:</span> New Park Hotel</p>
+                <p> <span class="text-color">Date:</span> 31 December Night 2023</p>
+                <p> <span class="text-color">Time:</span> Evening 7.30 pm to 12.30 am</p>
                 <button>Join Now</button>
             </div>
         </section>
