--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </div>
     </Header>
     <Main>
-        <section class="deals">
+        <section class="deals-section">
             <h1>65% OFF</h1>
             <p>OUR HOLIDAY DEALS ARE BETTER</p>
             <h2>ALL CATEGORIES</h2>
             <img src="resources/New Year Photo.png" alt="">
         </section>
-        <section class="party">
+        <section class="party-section">
             <div>
                 <h1>Welcome to <br> midnight party</h1>
                 <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
@@ -33,54 +33,63 @@
                 <img src="resources/Group 70.png" alt="">
             </div>
         </section>
-        <section class="details">
-            <div class="details-container">
-                <p> <span class="text-color">Place:</span> New Park Hotel</p>
-                <p> <span class="text-color">Date:</span> 31 December Night 2023</p>
-                <p> <span class="text-color">Time:</span> Evening 7.30 pm to 12.30 am</p>
-                <button>Join Now</button>
-            </div>
+        <section class="details-section">
+            <p> <span class="text-color">Place:</span> New Park Hotel</p>
+            <p> <span class="text-color">Date:</span> 31 December Night 2023</p>
+            <p> <span class="text-color">Time:</span> Evening 7.30 pm to 12.30 am</p>
+            <button>Join Now</button>
         </section>
-        <section class="offer">
-            <div>
+        <section class="offer-section">
+            <div class="best-offer">
                 <h4>NEW BEST OFFER</h4>
                 <h1>Coming Soon</h1>
                 <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
                     sodales risus ut pellentesque vel euismod. </p>
             </div>
-            <div>
+            <div class="middle-image">
                 <img src="resources/Ellipse 1.png" alt="">
             </div>
-            <div>
+            <div class="year-part">
                 <h2>2024</h2>
                 <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
                 <img src="resources/Group 96.png" alt="">
             </div>
         </section>
-        <section class="sale">
-            <h4>WHAT IS FUNCTIONAL</h4>
-            <h1>Holidays Sale 50%</h1>
-            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
-                risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
-            <img src="resources/Rectangle 1.png" alt="">
+        <section class="sale-section">
+            <div class="sale-heading">
+                <h4>WHAT IS FUNCTIONAL</h4>
+                <h1> <span class="text-color">Holidays</span> Sale 50%</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales
+                    risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.
+                </p>
+            </div>
+            <!-- <div>
+                <img src="resources/Rectangle 1.png" alt="">
+                <img src="resources/Rectangle 2.png" alt="">
+                <img src="resources/Group 75.png" alt="">
+                <img src="resources/Group 44.png" alt="">
+            </div> -->
         </section>
-        <section class="gifts">
-            <div>
+        <section class="gifts-section">
+            <div class="portfolio">
                 <h4>THE BEST GIFTS</h4>
-                <h2>Our Awesome Portfolio</h2>
+                <h1>Our Awesome Portfolio</h1>
                 <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
                     sodales risus ut pellentesque vel euismod. </p>
             </div>
-            <div>
+            <div class="gift-images">
                 <img src="resources/Rectangle 3.png" alt="">
                 <img src="resources/Rectangle 4.png" alt="">
                 <img src="resources/Rectangle 5.png" alt="">
+            </div>
+            <div class="gift-images">
                 <img src="resources/Rectangle 6.png" alt="">
                 <img src="resources/Rectangle 7.png" alt="">
                 <img src="resources/Rectangle 8.png" alt="">
             </div>
         </section>
-        <section class="newsletter">
+        <section class="newsletter-section">
             <div>
                 <img src="resources/Group 61.png" alt="">
                 <h2>Subscribe Newsletter</h2>
