footer style added

--- a/index.html
+++ b/index.html
@@ -92,22 +92,23 @@
         <section class="newsletter-section">
             <div>
                 <img src="resources/Group 61.png" alt="">
-                <h2>Subscribe Newsletter</h2>
+                <h1>Subscribe Newsletter</h1>
                 <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
                     sodales risus ut pellentesque vel euismod. </p>
             </div>
-            <div>
+            <div class="input-field">
                 <input type="email" placeholder="user@gmail.com" name="" id="">
                 <!-- problem -->
-                <input type="button" placeholder="Subscribe" value="">
+                <input type="button" value="subscribe">
             </div>
         </section>
     </Main>
     <Footer>
-        <div>
+        <div class="footer-text">
             <div>
                 <p>44, Big Building Roosevelt Street
-                    Beach Gardens Florida 33410</p>
+                </p>
+                <p>Beach Gardens Florida 33410</p>
             </div>
             <div>
                 <!-- icon -->
@@ -116,13 +117,13 @@
                 <p>www.website.com</p>
             </div>
         </div>
-        <div>
+        <div class="button-container">
             <button><img src="resources/Instagram.png" alt=""></button>
             <button><img src="resources/Twitter.png" alt=""></button>
             <button><img src="resources/Linkedin.png" alt=""></button>
             <button><img src="resources/Facebook.png" alt=""></button>
         </div>
-        <div>
+        <div class="footer-end">
             <p>2017, All Rights Reserved.</p>
             <p>Unsubscribe</p>
         </div>
