holiday sale image added

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                     risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.
                 </p>
             </div>
-            <!-- <div>
-                <img src="resources/Rectangle 1.png" alt="">
-                <img src="resources/Rectangle 2.png" alt="">
-                <img src="resources/Group 75.png" alt="">
-                <img src="resources/Group 44.png" alt="">
-            </div> -->
+            <div class="image-container">
+                <img class="image1" src="resources/Rectangle 1.png" alt="">
+                <!-- <img class="image2" src="resources/Rectangle 2.png" alt="">
+                <img class="image3" src="resources/Group 75.png" alt="">
+                <img class="image4" src="resources/Group 44.png" alt=""> -->
+            </div>
         </section>
         <section class="gifts-section">
             <div class="portfolio">
@@ -97,9 +97,8 @@
                     sodales risus ut pellentesque vel euismod. </p>
             </div>
             <div class="input-field">
-                <input type="email" placeholder="user@gmail.com" name="" id="">
-                <!-- problem -->
-                <input type="button" value="subscribe">
+                <input type="email" placeholder="user@gmail.com">
+                <button>Subscribe</button>
             </div>
         </section>
     </Main>
