meaningful text added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy New Year</title>
+    <script src="https://kit.fontawesome.com/09ef8daa53.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -25,8 +26,11 @@
         <section class="party-section">
             <div>
                 <h1>Welcome to <br> midnight party</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
-                    sodales risus ut pellentesque vel euismod. </p>
+                <p>Welcome to the Midnight Party, where the night comes alive and every moment is steeped in magic and
+                    mystery! As the clock strikes alive twelve, the ordinary world fades away, and a realm of
+                    enhancement unfolds before us. Whether you're here to dance under the stars, indulge in delightful
+                    midnight snacks, or simply lose yourself in the music, tonight is all about celebrating the beauty
+                    and wonder of the night.</p>
                 <button>Join Now</button>
             </div>
             <div class="year-image">
@@ -43,15 +47,17 @@
             <div class="best-offer">
                 <h4>NEW BEST OFFER</h4>
                 <h1>Coming Soon</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
-                    sodales risus ut pellentesque vel euismod. </p>
+                <p>We are thrilled to announce an incredible opportunity that's just around the corner! Get ready to
+                    experience unbeatable deals and exclusive savings like never before.Mark your calendars and stay
+                    tuned for more details. You won't want to miss this! Keep an eye on your inbox and our social media
+                    channels for the big reveal.</p>
             </div>
             <div class="middle-image">
                 <img src="resources/Ellipse 1.png" alt="">
             </div>
             <div class="year-part">
                 <h2>2024</h2>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <p>Coming Soon: The Best Offer of the Year - Stay Tuned!</p>
                 <img src="resources/Group 96.png" alt="">
             </div>
         </section>
@@ -59,9 +65,10 @@
             <div class="sale-heading">
                 <h4>WHAT IS FUNCTIONAL</h4>
                 <h1> <span class="text-color">Holidays</span> Sale 50%</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
-                    sodales
-                    risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.
+                <p>The holiday season is upon us, and we're spreading the cheer with our biggest sale of the year!
+                    Whether you're shopping for the perfect gift or treating yourself, now is the time to save big.
+                    Enjoy incredible discounts of up to 50% on a wide range of products. From the latest gadgets and
+                    stylish apparel to must-have home essentials, there's something for everyone.
                 </p>
             </div>
             <div class="image-container">
@@ -75,8 +82,10 @@
             <div class="portfolio">
                 <h4>THE BEST GIFTS</h4>
                 <h1>Our Awesome Portfolio</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
-                    sodales risus ut pellentesque vel euismod. </p>
+                <p>Whether you're looking for the the latest fashion trends, unique home decor, we have it all. With a
+                    commitment to exceptional customer service and a passion for providing a delightful shopping
+                    experience, we invite you to explore, enjoy, and discover something special every time you visit.
+                </p>
             </div>
             <div class="gift-images">
                 <img src="resources/Rectangle 3.png" alt="">
@@ -93,8 +102,7 @@
             <div>
                 <img src="resources/Group 61.png" alt="">
                 <h1>Subscribe Newsletter</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
-                    sodales risus ut pellentesque vel euismod. </p>
+                <p>To stay updated with the latest news, subscribe to our Newsletter. </p>
             </div>
             <div class="input-field">
                 <input type="email" placeholder="user@gmail.com">
@@ -109,19 +117,21 @@
                 </p>
                 <p>Beach Gardens Florida 33410</p>
             </div>
-            <div>
+            <div class="contacts">
                 <!-- icon -->
-                <p>+00 123 584 124</p>
+                <p><i class="fas fa-phone"></i> +00 123 584 124</p>
                 <!-- icon -->
-                <p>www.website.com</p>
+                <p><i class="fas fa-globe"></i> www.website.com</p>
             </div>
         </div>
+        <hr class="border1">
         <div class="button-container">
             <button><img src="resources/Instagram.png" alt=""></button>
             <button><img src="resources/Twitter.png" alt=""></button>
             <button><img src="resources/Linkedin.png" alt=""></button>
             <button><img src="resources/Facebook.png" alt=""></button>
         </div>
+        <hr class="border2">
         <div class="footer-end">
             <p>2017, All Rights Reserved.</p>
             <p>Unsubscribe</p>
